Fixed Scrolling Issue
I made it to where the Table display on the Homepage does not overflow on the main page itself so there should be no vertical scroll bar on the main page. The Table overflows in its own container so it should always have the horizontal and vertical scroll bars present.

--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -2,7 +2,7 @@
 .mainpage {
     padding: 10px;
     padding-top: 20px;
-    padding-bottom: 15px;
+    padding-bottom: 15.9px;
     border: 1px solid black;
     height: 100%;
     background-color: #E5DBAE;
